Iyzi ve automapper

--- a/ItServiceApp/appsettings.json
+++ b/ItServiceApp/appsettings.json
@@ -9,6 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "IyzicoOptions": {
+    "ApiKey": "sandbox-qxJ9Tw6slbuVLG6FqTGwPOhZYE2aHzRG",
+    "SecretKey": "sandbox-TsX44HiEm1QPQI61LRspAViUipAhHzi9",
+    "BaseUrl": "https://sandbox-api.iyzipay.com"
+  },
   "AllowedHosts": "*",
   "EmailOptions": {
     "SenderMail": "501.wissen@gmail.com",
